[gd_scene load_steps=6 format=3 uid="uid://bh8u3xjqm7fs2"]

[ext_resource type="Script" path="res://src/scripts/Services/ResumeProgressDialog.gd" id="1_1j0qv"]
[ext_resource type="FontFile" uid="uid://v1atp56ihxgh" path="res://src/styles/official_font.tres" id="2_x5nk8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dialog_background"]
bg_color = Color(0, 0, 0, 0.7)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dialog_panel"]
bg_color = Color(0.1, 0.15, 0.25, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.4, 0.6, 1, 0.8)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0, 0, 0, 0.6)
shadow_size = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(0.2, 0.3, 0.5, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.6, 0.9, 0.6)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="ResumeProgressDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1j0qv")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dialog_background")

[node name="DialogPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dialog_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="DialogPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="TitleLabel" type="Label" parent="DialogPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.95, 1, 1)
theme_override_fonts/font = ExtResource("2_x5nk8")
theme_override_font_sizes/font_size = 36
text = "Continue Lessons?"
horizontal_alignment = 1

[node name="TitleSeparator" type="HSeparator" parent="DialogPanel/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_button")

[node name="MessageContainer" type="VBoxContainer" parent="DialogPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="MessageLabel" type="RichTextLabel" parent="DialogPanel/VBoxContainer/MessageContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.8, 0.9, 1, 1)
theme_override_fonts/normal_font = ExtResource("2_x5nk8")
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "[center]You have previous progress in lessons.

Would you like to continue from where you left off or start fresh?[/center]"
fit_content = true

[node name="ProgressInfoLabel" type="Label" parent="DialogPanel/VBoxContainer/MessageContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.8, 0.9, 1)
theme_override_fonts/font = ExtResource("2_x5nk8")
theme_override_font_sizes/font_size = 16
text = "üìç Last lesson: Prelim Lesson 5 of 25
‚è±Ô∏è Last accessed: 2024-01-15 at 14:30"
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="DialogPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ResumeButton" type="Button" parent="DialogPanel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 1, 0.9, 1)
theme_override_fonts/font = ExtResource("2_x5nk8")
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_button")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button")
text = "üìñ Continue from Lesson 5"

[node name="StartFreshButton" type="Button" parent="DialogPanel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.9, 1)
theme_override_fonts/font = ExtResource("2_x5nk8")
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_button")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button")
text = "üîÑ Start from Lesson 1"

[node name="CancelButton" type="Button" parent="DialogPanel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.9, 1)
theme_override_fonts/font = ExtResource("2_x5nk8")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_button")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button")
text = "‚ùå Cancel"
